NEW CODE ROBOT WITH WORKING AUTONOMUS